5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1716_2504.log
== TEST (2019-05-16 12:14:50) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))

s=0#virus
v=0#leucocitos
r=0
q=0
while(s<c):
	p=s/100
	r=a*p
	s=s+1
	while(v<d):
		o=d/100
		q=b*o
		v=v+1
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:15:11) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))

s=0#virus
v=0#leucocitos
r=0
q=0
while(s<c):
	p=s/100
	r=a*p
	s=s+1
	while(v<d):
		o=d/100
		q=b*o
		v=v+1
		
u=r+q
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:15:26) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))

s=0#virus
v=0#leucocitos
r=0
q=0
while(s<c):
	p=s/100
	r=a*p
	s=s+1
	while(v<d):
		o=d/100
		q=b*o
		v=v+1
		
u=r+q
print(u)
-- OUTPUT:
7631.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:15:33) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))

s=0#virus
v=0#leucocitos
r=0
q=0
while(s<c):
	p=s/100
	r=a*p
	s=s+1
	while(v<d):
		o=d/100
		q=b*o
		v=v+1
		
u=r+q
print(u)
-- OUTPUT:
7631.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:18:08) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
c=c/100
d=d/100
s=a#virus
v=b#leucocitos
d=0

while(s<v):
	s=s+c
	v=v+d
	d=d+1

print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(u)
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:18:12) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
c=c/100
d=d/100
s=a#virus
v=b#leucocitos
d=0

while(s<v):
	s=s+c
	v=v+d
	d=d+1

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(u)
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:18:45) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
c=c/100
d=d/100
s=a#virus
v=b#leucocitos
d=0

while(s<v):
	s=s+c
	v=v+d
	d=d+1
	print(s)
	print(v)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(u)
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:19:27) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
c=c/100
d=d/100
s=a#virus
v=b#leucocitos
q=0

while(s<v):
	s=s+c
	v=v+d
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:20:28) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=a#virus
v=b#leucocitos
q=0

while(s<v):
	s=s*c/100
	v=v*d/100
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:20:52) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=a#virus
v=b#leucocitos
q=0

while(s<v):
	s=s*c/100
	v=v*d/100
	q=q+1
	print(s)
	print(v)
print(d)
-- EXECUTION TIME:
0.169841
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
75
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
90
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:21:57) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=a#virus
v=b#leucocitos
q=0

while(s>v):
	s=s*(c/100)
	v=v*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
7012.5
4125.0
140.25
3093.75
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:22:42) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=0#virus
v=0#leucocitos
q=0

while(v>s):
	s=a*(c/100)
	v=b*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:22:57) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=0#virus
v=0#leucocitos
q=0

while(v<s):
	s=a*(c/100)
	v=b*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:23:09) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=0#virus
v=0#leucocitos
q=0

while(v<s):
	s=a*(c/100)
	v=b*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:23:19) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=0#virus
v=0#leucocitos
q=0

while(v<s):
	s=a*(c/100)
	v=b*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:24:50) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=0#virus
v=0#leucocitos
q=0

while(v<s):
	s=s+s*(c/100)
	v=v+v*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:25:12) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=a#virus
v=b#leucocitos
q=0

while(v<s):
	s=s+s*(c/100)
	v=v+v*(d/100)
	q=q+1
	print(s)
	print(v)
print(d)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
410813.07046391943
483801.35345458984
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:25:40) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=a#virus
v=b#leucocitos
q=0

while(v<s):
	s=s+s*(c/100)
	v=v+v*(d/100)
	q=q+1
	print(s)
	print(v)
print(q)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
410813.07046391943
483801.35345458984
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:25:51) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))
d=int(input(""))
s=a#virus
v=b#leucocitos
q=0

while(v<s):
	s=s+s*(c/100)
	v=v+v*(d/100)
	q=q+1
	print(s)
	print(v)
print(q)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
410813.07046391943
483801.35345458984
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:27:48) 
-- CODE:
a=int(input("virus "))
b=int(input("leucocitos "))
c=int(input("Percentual virus"))
d=int(input("Percentual leucocitos"))
s=a#virus
v=b#leucocitos
q=0

while(v*2>s):
	s=s+s*(c/100)
	v=v+v*(d/100)
	q=q+1
	print(s)
	print(v)
print(q)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
410813.07046391943
483801.35345458984
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:28:51) 
-- CODE:
a=int(input("virus "))
b=int(input("leucocitos "))
c=int(input("Percentual virus"))
d=int(input("Percentual leucocitos"))
s=a#virus
v=b#leucocitos
q=0

while(v*2<s):
	s=s+s*(c/100)
	v=v+v*(d/100)
	q=q+1
	print(s)
	print(v)
print(q)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:29:07) 
-- CODE:
a=int(input("virus "))
b=int(input("leucocitos "))
c=int(input("Percentual virus"))
d=int(input("Percentual leucocitos"))
s=a#virus
v=b#leucocitos
q=0

while(v*2<s):
	s=s+s*c/100
	v=v+v*d/100
	q=q+1
	print(s)
	print(v)
print(q)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:29:42) 
-- CODE:
a=int(input("virus "))
b=int(input("leucocitos "))
c=int(input("Percentual virus"))
d=int(input("Percentual leucocitos"))
s=a#virus
v=b#leucocitos
q=0

while(v<2*s):
	s=s+s*c/100
	v=v+v*d/100
	q=q+1
	print(s)
	print(v)
print(q)
-- OUTPUT:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
410813.07046391943
483801.35345458984
419029.3318731978
846652.3685455322
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:29:54) 
-- CODE:
a=int(input("virus "))
b=int(input("leucocitos "))
c=int(input("Percentual virus"))
d=int(input("Percentual leucocitos"))
s=a#virus
v=b#leucocitos
q=0

while(v<2*s):
	s=s+s*c/100
	v=v+v*d/100
	q=q+1
	print(s)
	print(v)
print(q)
-- EXECUTION TIME:
0.13826
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
357637.5
9625.0
364790.25
16843.75
372086.055
29476.5625
379527.7761
51583.984375
387118.331622
90271.97265625
394860.69825444004
157975.9521484375
402757.91221952887
276457.9162597656
410813.07046391943
483801.35345458984
419029.3318731978
846652.3685455322
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
676093.6
171085.5
703137.3439999999
325062.45
731262.8377599999
617618.655
760513.3512703999
1173475.4445000002
790933.8853212158
2229603.3445500005
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
456982.5
2742.75
498110.925
4360.9725
542940.90825
6933.946275
591805.5899925
11024.974577250001
645068.093091825
17529.709577827503
703124.2214700893
27872.23822874573
766405.4014023973
44316.85878370571
835381.8875286131
70463.80546609208
910566.2574061883
112037.4506910864
992517.2205727452
178139.54659882738
1081843.7704242922
283241.8790921355
1179209.7097624785
450354.58775649546
1285338.5836411016
716063.7945328278
1401019.0561688007
1138541.4333071962
1527110.7712239928
1810280.878958442
1664550.7406341522
2878346.5975439227
1814360.307291226
4576571.090094836
17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:30:01) 
-- CODE:
a=int(input("virus "))
b=int(input("leucocitos "))
c=int(input("Percentual virus"))
d=int(input("Percentual leucocitos"))
s=a#virus
v=b#leucocitos
q=0

while(v<2*s):
	s=s+s*c/100
	v=v+v*d/100
	q=q+1

print(q)
-- EXECUTION TIME:
0.137046
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
